--- a/dev/scss/pages/view.scss
+++ b/dev/scss/pages/view.scss
@@ -1,5 +1,5 @@
 //Blocks
-@import "top-icons";
-@import "poke-info";
-@import "poke-img";
-@import "tap-bar";
+@import "view-icons";
+@import "view-info";
+@import "view-img";
+@import "view-tabs";
