--- a/dev/scss/blocks/modal.scss
+++ b/dev/scss/blocks/modal.scss
@@ -1,18 +1,35 @@
 .modal {
   background-color: $yellow-color;
   position: fixed;
-  // box-sizing: border-box;
-  top: 0;
+  top: -18vh;
   left: 0;
   width: 100%;
   height: 18vh;
   z-index: 150;
-  transform: translateY(-100%);
+  transform: translateY(0);
   transition: transform 0.35s;
   display: flex;
   align-items: center;
 
   &.isActive {
-    transform: translateY(0);
+    transform: translateY(100%);
+  }
+
+  &__button {
+    font-weight: $font-bold;
+    padding: 5px 20px;
+    margin-left: 20px;
+    text-align: center;
+    border-radius: 10px;
+    background-color: $pure-color;
+    border: 3px solid $pure-color;
+    color: $black-color;
+    min-width: 120px;
+    outline: none;
+
+    &.isActive,
+    :focus {
+      background: $yellow-color;
+    }
   }
 }
