--- a/dev/scss/blocks/pokebox.scss
+++ b/dev/scss/blocks/pokebox.scss
@@ -39,6 +39,10 @@
     padding: 1rem 0;
     font-size: 1.5rem;
     text-align: center;
+
+    &.isFavorite {
+      background-color: $yellow-color;
+    }
   }
 
   &.isNotVisible {
