--- a/dev/scss/blocks/radio.scss
+++ b/dev/scss/blocks/radio.scss
@@ -8,7 +8,7 @@
   }
 
   &__options {
-    border: solid 3px lighten($color: $yellow-color, $amount: 20%);
+    // border: solid 3px lighten($color: $yellow-color, $amount: 20%);
     display: inline-block;
     border-radius: 10px;
     overflow: hidden;
@@ -18,10 +18,9 @@
   &__input {
     @include reset-radio;
 
-    &:checked + input + input + label,
-    &:checked + input + label + label,
-    &:checked + label + label + label {
-      background: lighten($color: $yellow-color, $amount: 20%);
+    &:checked + input + label,
+    &:checked + label + label {
+      background: $pure-color;
     }
   }
 
@@ -33,8 +32,13 @@
     display: inline-block;
     cursor: pointer;
     font-weight: $font-bold;
-    padding: 8px 10px;
+    padding: 10px;
     min-width: 60px;
     text-align: center;
+
+    &:last-of-type {
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
   }
 }
