--- a/dev/scss/blocks/topbar.scss
+++ b/dev/scss/blocks/topbar.scss
@@ -17,5 +17,13 @@
     background: url("../assets/icons/search.svg") no-repeat;
     background-color: $pure-color;
     text-indent: 30px;
+
+    &::placeholder {
+      opacity: 0;
+    }
+
+    &:focus::placeholder {
+      opacity: 1;
+    }
   }
 }
