--- a/dev/scss/mixins/buttons.scss
+++ b/dev/scss/mixins/buttons.scss
@@ -1,7 +1,14 @@
 @mixin buttons($url) {
   background: url(#{$url}) no-repeat;
-  width: 30px;
-  height: 30px;
+  background-position: center;
+  background-size: 30px 30px;
+  width: 50px;
+  height: 50px;
   border: none;
   padding: 1rem;
+
+  &:focus {
+    border: 3px solid $white-color;
+    outline: none;
+  }
 }
