--- a/dev/scss/config/colors.scss
+++ b/dev/scss/config/colors.scss
@@ -14,6 +14,6 @@ $white-color: #f0f2f6;
 $grey-color: #c7c8ca;
 $red-color: var(--red-color);
 $green-color: var(--green-color);
-$blue-color: var(--blue-color);
+$blue-color: #37a5c6;
 $black-color: #000000;
 $yellow-color: #ffd86f;
