--- a/dev/scss/blocks/modal.scss
+++ b/dev/scss/blocks/modal.scss
@@ -17,14 +17,14 @@
 
   &__button {
     font-weight: $font-bold;
-    padding: 5px 20px;
-    margin-left: 20px;
+    padding: 5px 0;
+    margin-left: 1rem;
     text-align: center;
     border-radius: 10px;
     background-color: $pure-color;
     border: 3px solid $pure-color;
     color: $black-color;
-    min-width: 120px;
+    min-width: 90px;
     outline: none;
 
     &.isActive,
