--- a/dev/views/config/about.pug
+++ b/dev/views/config/about.pug
@@ -1,2 +1,1 @@
-- const about = ['Species', 'Height', 'Weight', 'Abilities']
-- const breeding = ['Gender', 'Egg groups', 'Egg Cycle']
+- const about = ['species', 'height', 'weight',  'color', 'abilities','flavor text']
