--- a/dev/scss/config/colors.scss
+++ b/dev/scss/config/colors.scss
@@ -2,11 +2,26 @@
   --pure-color: #ffffff;
   --white-color: #f0f2f6;
   --grey-color: #c7c8ca;
-  --red-color: #f42a28;
-  --green-color: #14a06f;
-  --blue-color: #37a5c6;
   --black-color: #000000;
   --yellow-color: #ffd86f;
+  --normal-color: #a8a878;
+  --fire-color: #f08030;
+  --fighting-color: #c03028;
+  --grass-color: #78c850;
+  --electric-color: #f8d030;
+  --water-color: #6890f0;
+  --ground-color: #e0c069;
+  --rock-color: #b8a038;
+  --fairy-color: #fceaff;
+  --poison-color: #a040a0;
+  --bug-color: #a8b820;
+  --dragon-color: #6f38f8;
+  --psychic-color: #f85888;
+  --flying-color: #a890f0;
+  --ice-color: #b8a038;
+  --ghost-color: #705898;
+  --dark-color: #715848;
+  --steel-color: #b8b8d0;
 }
 
 $pure-color: var(--pure-color);
