--- a/dev/views/config/about.pug
+++ b/dev/views/config/about.pug
@@ -1,1 +1,1 @@
-- const about = ['species', 'height', 'weight',  'color', 'abilities','flavor text']
+- const about = ['height', 'weight',  'color', 'abilities', 'flavor text']
