--- a/dev/scss/blocks/modal.scss
+++ b/dev/scss/blocks/modal.scss
@@ -16,19 +16,21 @@
   }
 
   &__button {
+    width: 100px;
+    justify-self: end;
     font-weight: $font-bold;
-    padding: 5px 0;
-    margin-left: 1rem;
     text-align: center;
     border-radius: 10px;
     background-color: $pure-color;
     border: 3px solid $pure-color;
-    color: $black-color;
-    min-width: 90px;
     outline: none;
+    color: $black-color;
 
-    &.isActive,
-    :focus {
+    &:focus {
+      border: 3px solid $black-color;
+    }
+
+    &.isActive {
       background: $yellow-color;
     }
   }
