--- a/dev/views/config/stats.pug
+++ b/dev/views/config/stats.pug
@@ -1,1 +1,1 @@
-- const stats = ['HP', 'Attack', 'Defense', 'Sp.Atk', 'Sp.Defense', 'Speed', 'Total']
+- const stats = ['HP', 'Attack', 'Defense', 'Sp-Atk', 'Sp-Def', 'Speed', 'Total']
