--- a/dev/views/mixins/labels.pug
+++ b/dev/views/mixins/labels.pug
@@ -1,3 +1,3 @@
 mixin labels(labels)
   each label in labels
-    label(for=label).radio__label= label 
+    label(for=label tabIndex="0").radio__label= label 
