--- a/dev/scss/blocks/topbar.scss
+++ b/dev/scss/blocks/topbar.scss
@@ -3,20 +3,29 @@
   width: 100%;
   display: flex;
   align-items: flex-end;
-  position: sticky;
-  top: 0;
-  background-color: $white-color;
-  z-index: 100;
 
   &__input {
     outline: none;
-    width: 45%;
+    width: 50%;
+    max-width: 400px;
     padding: 0.5rem;
     margin-left: 10px;
     border-radius: 20px;
     background: url("../assets/icons/search.svg") no-repeat;
     background-color: $pure-color;
     text-indent: 30px;
+
+    @include tablet {
+      margin-left: 40px;
+    }
+
+    @include laptop {
+      margin-left: 70px;
+
+      &:hover::placeholder {
+        opacity: 1;
+      }
+    }
 
     &::placeholder {
       opacity: 0;
