--- a/dev/scss/config/colors.scss
+++ b/dev/scss/config/colors.scss
@@ -24,11 +24,9 @@
   --steel-color: #b8b8d0;
 }
 
-$pure-color: var(--pure-color);
+$pure-color: #ffffff;
 $white-color: #f0f2f6;
 $grey-color: #c7c8ca;
-$red-color: var(--red-color);
-$green-color: var(--green-color);
 $blue-color: #37a5c6;
 $black-color: #000000;
 $yellow-color: #ffd86f;
