--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -21,6 +21,7 @@
 @import "blocks/modal";
 @import "blocks/slider";
 @import "blocks/radio";
+@import "blocks/header";
 
 //Pages
 @import "pages/view.scss";
