--- a/dev/views/pages/index.pug
+++ b/dev/views/pages/index.pug
@@ -2,25 +2,27 @@ extends ../templates/template.pug
 
 block top
 
-    #topbar.topbar
-      input(type="text" name="search" placeholder="Name/#000" id="search").topbar__input
+    header.header
     
-    #slider.slider
-      button(type="button" tabindex="0" alt="sliders")#slider-button.slider__button 
-      img(src="assets/img/pokeball.png", alt="pokeball")#slider-img.slider__img
+      #topbar.topbar
+        input(type="text" name="search" placeholder="Name/#000" id="search").topbar__input
+      
+      #slider.slider
+        button(type="button" tabindex="0" alt="sliders")#slider-button.slider__button 
+        img(src="assets/img/pokeball.png", alt="pokeball")#slider-img.slider__img
 
-    #modal.modal
-      form#radio-group.radio
-        p.radio__title Sort By:
-          .radio__grid
-            #radio-options.radio__options
-              input(type="radio" id="number" name="sort" value="number" checked).radio__input
-              input(type="radio" id="name" name="sort" value="name").radio__input
-              +labels(radio)
-            button(type="button" id="favorites").modal__button favorites
-            
-    .title
-      h1 Pokedex
+      #modal.modal
+        form#radio-group.radio
+          p.radio__title Sort By:
+            .radio__grid
+              #radio-options.radio__options
+                input(type="radio" id="number" name="sort" value="number" checked).radio__input
+                input(type="radio" id="name" name="sort" value="name").radio__input
+                +labels(radio)
+              button(type="button" id="favorites").modal__button favorites
+              
+      .title
+        h1 Pokedex
 
 block main
 
@@ -28,7 +30,6 @@ block main
       #main-content.main__content 
         p No Matches
 
-      
     a(href="#")#gotop.gotop
       img(src="assets/icons/arrow.svg")
 
