--- a/dev/scss/blocks/modal.scss
+++ b/dev/scss/blocks/modal.scss
@@ -1,9 +1,11 @@
 .modal {
+  position: absolute;
   background-color: $yellow-color;
-  position: fixed;
   top: -18vh;
   left: 0;
   width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
   height: 18vh;
   z-index: 150;
   transform: translateY(0);
@@ -25,6 +27,21 @@
     border: 3px solid $pure-color;
     outline: none;
     color: $black-color;
+    width: 100px;
+    cursor: pointer;
+
+    @include tablet {
+      margin-right: 30px;
+    }
+
+    @include laptop {
+      font-size: 1.3rem;
+      width: 150px;
+
+      &:hover {
+        border: 3px solid $black-color;
+      }
+    }
 
     &:focus {
       border: 3px solid $black-color;
