--- a/dev/scss/blocks/slider.scss
+++ b/dev/scss/blocks/slider.scss
@@ -1,18 +1,24 @@
 .slider {
   &__button {
-    position: fixed;
+    position: absolute;
     height: 30px;
     width: 30px;
     top: 19px;
-    right: 15px;
+    right: 13px;
     background: url("../assets/icons/sliders.svg");
     background-color: transparent;
     border: none;
     z-index: 201;
+    cursor: pointer;
+
+    @include tablet {
+      top: 35px;
+      right: 29px;
+    }
 
     &:focus {
       outline: none;
-      transform: scale(1.2);
+      transform: scale(1.1);
     }
 
     &.isActive {
@@ -20,17 +26,27 @@
       background-size: 90%;
       background-position: center center;
     }
+
+    @include laptop {
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
   }
 
   &__img {
-    position: fixed;
-    height: 280px;
-    top: -106px;
-    right: -110px;
+    position: absolute;
+    height: 205px;
+    top: -69px;
+    right: -75px;
     filter: invert(87%) sepia(34%) saturate(746%) hue-rotate(334deg)
       brightness(102%) contrast(101%) drop-shadow(1px 1px 1px rgba(0, 0, 0, 1));
-    z-index: 200;
     transition: height 0.35s;
+    z-index: 200;
+
+    @include tablet {
+      height: 238px;
+    }
 
     &.isActive {
       height: 0;
