--- a/dev/scss/pages/view-info.scss
+++ b/dev/scss/pages/view-info.scss
@@ -5,9 +5,27 @@
   padding-left: 20px;
   padding-right: 20px;
 
+  @include tablet {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  @include laptop {
+    height: 15vh;
+
+    &__type {
+      margin-top: auto;
+      margin-bottom: auto;
+    }
+  }
+
   &__type h1 {
     margin: 0;
     text-transform: capitalize;
+
+    @include laptop {
+      font-size: 3.5rem;
+    }
   }
 
   &__type span {
@@ -19,11 +37,20 @@
     font-size: 0.7rem;
     margin: 3px;
     text-transform: capitalize;
+
+    @include laptop {
+      font-size: 1.3rem;
+    }
   }
 
   &__number {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+
+    @include laptop {
+      font-size: 2rem;
+      margin-right: 0.8rem;
+    }
   }
 }
