--- a/dev/scss/pages/view-moves.scss
+++ b/dev/scss/pages/view-moves.scss
@@ -1,27 +1,51 @@
 .moves-list {
   @include reset-list;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: auto;
+  margin-bottom: auto;
   width: 95%;
 
   &__item {
+    width: 80%;
     background-color: $white-color;
     padding: 0.5rem;
-    margin: 1rem 1rem 0 1rem;
+    margin: 1rem auto 0 auto;
     text-align: center;
     border: 1px solid $black-color;
     font-size: 1.5rem;
-    box-shadow: 2px 2px 5px 0px $black-color,
-      2px 2px 15px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 5px 0px $black-color;
+    cursor: pointer;
+
+    @include tablet {
+      font-size: 2rem;
+      margin-top: 2rem;
+    }
+
+    @include laptop {
+      font-size: 2.5rem;
+
+      &:hover {
+        background-color: $yellow-color;
+      }
+    }
 
     &:focus {
       background-color: $yellow-color;
       outline: none;
     }
+
+    &.isActive {
+      background-color: $yellow-color;
+    }
   }
 
   &__card {
+    width: 80%;
     background-color: $white-color;
     padding: 0.5rem;
-    margin: 0 1rem;
+    margin: 0 auto;
     display: none;
 
     &.isActive {
