--- a/dev/scss/base/base.scss
+++ b/dev/scss/base/base.scss
@@ -7,10 +7,22 @@ body {
   background-color: $grey-color;
   color: $black-color;
   font-weight: $font-regular;
-  max-width: 1440px;
+  max-width: 425px;
   margin-left: auto;
   margin-right: auto;
   font-family: $main-font, sans-serif;
+
+  @include tablet {
+    max-width: 500px;
+  }
+
+  @include laptop {
+    max-width: 1024px;
+  }
+
+  @include desktop {
+    max-width: 1440px;
+  }
 }
 
 body::-webkit-scrollbar {
