--- a/dev/scss/pages/view-section.scss
+++ b/dev/scss/pages/view-section.scss
@@ -1,10 +1,13 @@
 .section {
   top: 55vh;
   height: 45vh;
+  max-width: 425px;
   background-color: $pure-color;
   position: fixed;
   right: 0;
   left: 0;
+  margin-left: auto;
+  margin-right: auto;
   transition-delay: 0.5s;
   transform: translateY(100%);
   overflow-y: scroll;
