--- a/dev/scss/blocks/title.scss
+++ b/dev/scss/blocks/title.scss
@@ -1,36 +1,35 @@
 .title {
   width: 100%;
-  height: 10vh;
+  height: 75px;
   font-family: $pokemon-font, sans-serif;
-  border-bottom: 3px solid $black-color;
-  overflow: hidden;
+  font-size: 2rem;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 15px;
+  color: $yellow-color;
+  letter-spacing: 0.2rem;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 $black-color;
+  display: flex;
+  position: sticky;
+  top: 10vh;
 
-  & h1 {
-    font-size: 2.7rem;
-    height: 100%;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 15px;
-    color: $yellow-color;
-    letter-spacing: 0.2rem;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
-      1px 1px 0 $black-color;
-
-    @include tablet {
-      margin-left: 40px;
-      font-size: 3rem;
-    }
-
-    @include laptop {
-      margin-left: 70px;
-      font-size: 3.5rem;
-    }
+  @include tablet {
+    margin-left: 40px;
+    font-size: 2.5rem;
+    height: 93.7px;
   }
 
-  @supports (-webkit-text-stroke: 1px black) {
-    h1 {
-      -webkit-text-stroke: 1px black;
-      -webkit-text-fill-color: $yellow-color;
-    }
+  @include laptop {
+    margin-left: 70px;
+    font-size: 3rem;
+    height: 112.44px;
+  }
+}
+
+@supports (-webkit-text-stroke: 1px black) {
+  .title {
+    -webkit-text-stroke: 1px black;
+    -webkit-text-fill-color: $yellow-color;
   }
 }
