--- a/dev/scss/blocks/topbar.scss
+++ b/dev/scss/blocks/topbar.scss
@@ -1,8 +1,8 @@
 .topbar {
-  height: 8vh;
+  height: 93.7px;
   width: 100%;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 
   &__input {
     outline: none;
